<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Blood Pressure</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="type">Type</string>
    <string name="got_it">Got it</string>
    <string name="tracker">Tracker</string>
    <string name="hypertension_types">Hypertension Types You Must Know</string>
    <string name="break_blood">Break Blood Pressure MisBeliefs</string>
    <string name="find_your">Find Your Blood Pressure Type</string>
    <string name="learn_about">Learn About Blood Pressure</string>
    <string name="know_bp_numbers"><![CDATA[Know BP Numbers & Normal Range]]></string>
    <string name="notice_symptoms">Notice Symptoms of Hypertension</string>
    <string name="know_problems">Know Problems Hypertension Brings</string>
    <string name="understand_hypotension"><![CDATA[Understand Hypotension: Symptoms & Types]]></string>
    <string name="first_line">First-line Drugs for Hypertension</string>
    <string name="control_bp">Control BP With a Healthy Lifestyle</string>
    <string name="lower_blood">Lower Blood Pressure by Exercises</string>
    <string name="how_to_diagnose">How to Diagnose Hypotension</string>
    <string name="first_line_drugs">First-line Drugs for Hypotension</string>
    <string name="first_aid_tips">First Aid Tips for Hypertensive Crisis</string>
    <string name="first_aid_tips_for_hypotensive">First Aid Tips for Hypotensive Crisis</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="average">Average</string>
    <string name="average_24h">Average 24h</string>
    <string name="last">Last</string>
    <string name="note">Note</string>
    <string name="upper_tracker">TRACKER</string>
    <string name="upper_info">INFO</string>
    <string name="upper_settings">SETTINGS</string>
    <string name="input_text_hint">Please enter something</string>
    <string name="hypertensive">Hypertensive</string>
    <string name="hypertension_stage_1">Hypertension Stage 1</string>
    <string name="hypertension_stage_2">Hypertension Stage 2</string>
    <string name="hypotension">Hypotension</string>
    <string name="normal">Normal</string>
    <string name="elevated">Elevated</string>
    <string name="note_dialog_title">BP Notes</string>
    <string name="delete_waring_title">Are you sure want to delete?</string>
    <string name="translating">Translating…</string>
    <string name="translate">Translate</string>
    <string name="original_text">Show original</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="after_meal">After Meal</string>
    <string name="after_medical">After Medical</string>
    <string name="after_walking">After Walking</string>
    <string name="before_meal">Before Meal</string>
    <string name="sitting">Sitting</string>
    <string name="lying">Lying</string>
    <string name="period">Period</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="add">Add</string>
    <string name="add_icon">+Add</string>
    <string name="add_new">Add new</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_record">New Record</string>
    <string name="last_sync">Last Sync</string>
    <string name="sign_out">Sign Out</string>
    <string name="sync_success">Sync Success!</string>
    <string name="loading">Loading…</string>
    <string name="sync_fail">Sync Fail!</string>
    <string name="measure_fail">Measure Fail!</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="sign_in_recommend">Sign in and synchronize your data</string>
    <string name="language">Language Options</string>
    <string name="export_file">Export as file</string>
    <string name="more">More</string>
    <string name="rate_us">Rate us</string>
    <string name="share_with_friend">Share with friends</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Feedback or suggestion</string>
    <string name="share_export_title">Share export file with</string>
    <string name="send">Send</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="not_sync">Not sync</string>
    <string name="info_and_know"><![CDATA[Info & Knowledge]]></string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="drag_note">Long press and drag to recorder</string>
    <string name="retry">Retry</string>
    <string name="choose">Choose your language</string>
    <string name="next">Next</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Other</string>
    <string name="your_health">Your health</string>
    <string name="under_weight">You are Under Weight</string>
    <string name="health">You are Healthy</string>
    <string name="over_weight">You are Overweight</string>
    <string name="obesity">You are Suffering from Obesity</string>
    <string name="normal_bmi_weight_range_for_the_height_18_5_24_9">Normal BMI weight range for the height: 18.5 – 24.9</string>
    <string name="save_confirm">Do you want to save this record?</string>
    <string name="saved">Saved record</string>
    <string name="slow">Slow</string>
    <string name="age">Age</string>
    <string name="measure">Measure</string>
    <string name="measuring">Measuring…</string>
    <string name="measure_instruction">Press your finger on the camera and breath evenly</string>
    <string name="start">Start</string>
    <string name="how_to_measure">How to measure</string>
    <string name="heart_rate_zone">Heart Rate Zone</string>
    <string name="your_result">Your Result</string>
    <string name="healthy">Healthy</string>
    <string name="maximum">Maximum</string>
    <string name="danger">Danger</string>
    <string name="result">Result</string>
    <string name="normal_heart_rate">A normal resting heart rate, or a heart rate when a person is inactive, can range from 60 to 100 BPM</string>
    <string name="tips">Tips</string>
    <string name="tip_1">– Lightly place your index finger on the rear camera.</string>
    <string name="tip_2">– Make sure the camera is fully covered.</string>
    <string name="tip_3">– Measure in a shaded environment.</string>
    <string name="tip_4">– Don\'t move your finger until the measurement is complete.</string>
    <string name="tip_5">– Finally place your finger then press start.</string>
    <string name="January">Jan. </string>
    <string name="February">Feb.</string>
    <string name="March">Mar.</string>
    <string name="April">Apr.</string>
    <string name="May">May</string>
    <string name="June">Jun.</string>
    <string name="July">Jul.</string>
    <string name="August">Aug.</string>
    <string name="September">Sep.</string>
    <string name="October">Oct.</string>
    <string name="November">Nov.</string>
    <string name="December">Dec.</string>
    <string name="intros_hypotension" translatable="false"><![CDATA[SYS < 90 or DIA < 60]]></string>
    <string name="intros_normal" translatable="false" tools:ignore="TypographyDashes">SYS 90-119 and DIA 60-79</string>
    <string name="intros_elevated" translatable="false" tools:ignore="TypographyDashes">SYS 120-129 and DIA 60-79</string>
    <string name="intros_hypertension_stage1" translatable="false" tools:ignore="TypographyDashes">SYS 130-139 or DIA 80-89</string>
    <string name="intros_hypertension_stage2" translatable="false" tools:ignore="TypographyDashes">SYS 140-180 or DIA 90-120</string>
    <string name="intros_hypertensive" translatable="false">SYS > 180 or DIA > 120</string>
</resources>