<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_tracker"
        android:icon="@drawable/ic_tracker"
        app:showAsAction="ifRoom"
        android:title="@string/tracker"/>

    <item android:id="@+id/menu_bmi"
        android:icon="@drawable/bmi"
        app:showAsAction="ifRoom"
        android:title="BMI"/>

    <item android:id="@+id/menu_measure"
        android:icon="@drawable/finger_print"
        app:showAsAction="ifRoom"
        android:title="@string/measure"/>

    <item android:id="@+id/menu_info"
        android:icon="@drawable/ic_open"
        app:showAsAction="ifRoom"
        android:title="@string/info"/>
    
    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings"/>

</menu>