<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_back_ground"
    android:padding="18dp"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rsz_download"/>

    <TextView
        android:layout_marginVertical="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/tips"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/tip_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/tip_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/tip_3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/tip_4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/tip_5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/got_it"
        android:id="@+id/got_it"
        android:background="@drawable/rounded_ripple_effect"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</LinearLayout>