<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_back_ground"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_confirm_dialog"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/delete_waring_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle35"
        android:text="@string/delete"
        android:id="@+id/tv_confirm"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_dialog"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle35"
        android:text="@string/cancel"
        android:id="@+id/tv_cancel_confirm"
        app:layout_constraintTop_toTopOf="@id/tv_confirm"
        app:layout_constraintRight_toLeftOf="@id/tv_confirm"
        android:layout_marginRight="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>