<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/dialog_back_ground"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_text_view"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="@string/gender"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:drawableTint="@color/color_background_2" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_text_view"
        android:gravity="center_vertical"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center_vertical"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha=".6"
            android:text="cm"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center_vertical"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha=".6"
            android:text="kg"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_ripple_effect"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>