<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_date"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_input_text_dialog"
        android:textSize="16sp"
        android:background="@drawable/bg_input_text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/input_text_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle35"
        android:text="@string/save"
        android:id="@+id/tv_save_input"
        android:paddingHorizontal="30dp"
        android:paddingVertical="8dp"
        app:layout_constraintLeft_toRightOf="@id/tv_cancel_input_dialog"
        app:layout_constraintTop_toBottomOf="@id/et_input_text_dialog"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle35"
        android:text="@string/cancel"
        android:id="@+id/tv_cancel_input_dialog"
        android:paddingVertical="8dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_save_input"
        app:layout_constraintRight_toLeftOf="@id/tv_save_input"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>