<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="14dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="6dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_back_ground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_1"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_1"
            android:backgroundTint="@color/color_hypotension" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hypotension"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_1"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_1"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_1"
            android:id="@+id/tv_type_detail_1"
            android:text="@string/intros_hypotension"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_1"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_2"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_2"
            android:backgroundTint="@color/color_normal" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_2"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_2"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_2"
            android:id="@+id/tv_type_detail_2"
            android:text="@string/intros_normal"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_2"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_3"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_3"
            android:backgroundTint="@color/color_elevated" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/elevated"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_3"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_3"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_3"
            android:id="@+id/tv_type_detail_3"
            android:text="@string/intros_elevated"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_3"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_4"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_4"
            android:backgroundTint="@color/color_hypertension_stage1" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hypertension_stage_1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_4"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_4"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_4"
            android:id="@+id/tv_type_detail_4"
            android:text="@string/intros_hypertension_stage1"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_4"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_5"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_5"
            android:backgroundTint="@color/color_hypertension_stage2" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hypertension_stage_2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_5"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_5"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_5"
            android:id="@+id/tv_type_detail_5"
            android:text="@string/intros_hypertension_stage2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_5"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="6dp"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/color_type_6"
            android:background="@drawable/rounded_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="14dp"
            app:layout_constraintRight_toLeftOf="@id/tv_type_name_6"
            android:backgroundTint="@color/color_hypertension" />

        <TextView
            android:layout_marginStart="14dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hypertensive"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tv_type_name_6"
            app:layout_constraintBottom_toTopOf="@id/tv_type_detail_6"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/color_type_6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tv_type_name_6"
            android:id="@+id/tv_type_detail_6"
            android:text="@string/intros_hypertensive"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_type_name_6"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>